--- a/index.html
+++ b/index.html
@@ -121,11 +121,20 @@ body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:#f5f7fa;
 }
 #toastHost .toast{ pointer-events:auto; }
 
-/* NADI grid input – auto-expand terkawal */
-.nadi-input{ 
-  min-width: 100px; 
-  width: auto; 
-  max-width: 300px;
+/* -----------------------------
+   NADI (gaya versi 2.5.0)
+   ----------------------------- */
+
+/* Input auto-grow (lebih stabil & sejajar) */
+.input-grow-wrapper{ position:relative; display:inline-block; max-width:100%; }
+.input-mirror{
+  position:absolute; left:0; top:0; visibility:hidden; white-space:pre;
+  font: inherit; padding: .25rem .5rem;
+}
+.nadi-input{
+  min-width: 100px;
+  width: auto;
+  max-width: 520px;
   border: none;
   outline: none;
   padding: 0.25rem 0.5rem;
@@ -133,21 +142,25 @@ body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:#f5f7fa;
   font-size: 0.875rem;
 }
 .nadi-input:focus { background: rgba(52, 152, 219, 0.1); border-radius: 4px; }
-.nadi-long{ min-width:200px; max-width:520px; }
-.nadi-row{ display:grid; grid-auto-flow:column; grid-auto-columns:max-content; gap:8px; align-items:center; overflow-x:auto; padding-bottom:4px; }
-.nadi-row > * { white-space:nowrap; }
 
-/* Dropdown DXT (klik baru buka) */
-.nadi-dxt-wrap .dropdown-toggle{ min-width:120px }
-
-/* Responsive */
-@media (max-width:992px){ .stat-card .number{font-size:1.3rem} }
-
-/* NADI Table */
-.nadi-table-container { overflow-x: auto; margin-bottom: 1rem; border-radius: 8px; border: 1px solid rgba(0,0,0,0.1); background: white; max-height: calc(100vh - 250px); }
-.nadi-table { width: 100%; min-width: 1800px; border-collapse: separate; border-spacing: 0; table-layout: fixed; }
-.nadi-table th { background-color: #f8f9fa; position: sticky; top: 0; z-index: 10; font-weight: 600; font-size: 0.85rem; padding: 8px 12px; border-bottom: 2px solid #dee2e6; white-space: nowrap; text-align: center; }
-.nadi-table td { padding: 8px; border-bottom: 1px solid #dee2e6; vertical-align: middle; height: 42px; position: relative; overflow: hidden; text-overflow: ellipsis; }
+/* Jadual NADI */
+.nadi-table-container {
+  overflow-x: auto; margin-bottom: 1rem; border-radius: 8px;
+  border: 1px solid rgba(0,0,0,0.1); background: white;
+  max-height: calc(100vh - 250px);
+}
+.nadi-table {
+  width: 100%; min-width: 1800px; border-collapse: separate; border-spacing: 0; table-layout: fixed;
+}
+.nadi-table th {
+  background-color: #f8f9fa; position: sticky; top: 0; z-index: 10;
+  font-weight: 600; font-size: 0.85rem; padding: 8px 12px; border-bottom: 2px solid #dee2e6;
+  white-space: nowrap; text-align: center;
+}
+.nadi-table td {
+  padding: 8px; border-bottom: 1px solid #dee2e6; vertical-align: middle; height: 42px;
+  position: relative; overflow: hidden; text-overflow: ellipsis;
+}
 .nadi-table tr:last-child td { border-bottom: none; }
 .nadi-table .form-control-sm { height: calc(1.5em + 0.5rem + 2px); padding: 0.25rem 0.5rem; font-size: 0.875rem; width: 100%; }
 .nadi-table .btn-sm { padding: 0.25rem 0.5rem; font-size: 0.875rem; }
@@ -157,7 +170,7 @@ body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:#f5f7fa;
 .nadi-table .tca-fields .form-control { min-width: 100%; }
 .nadi-table .bmi-field { min-width: 80px; text-align: center; }
 
-/* Column Widths */
+/* Lebar Kolum (selari & konsisten) */
 .nadi-table th:nth-child(1), .nadi-table td:nth-child(1) { width: 180px; }
 .nadi-table th:nth-child(2), .nadi-table td:nth-child(2) { width: 120px; }
 .nadi-table th:nth-child(3), .nadi-table td:nth-child(3) { width: 120px; }
@@ -167,24 +180,27 @@ body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:#f5f7fa;
 .nadi-table th:nth-child(7), .nadi-table td:nth-child(7) { width: 150px; }
 .nadi-table th:nth-child(8), .nadi-table td:nth-child(8) { width: 90px; }
 .nadi-table th:nth-child(9), .nadi-table td:nth-child(9) { width: 90px; }
-.nadi-table th:nth-child(10), .nadi-table td:nth-child(10) { width: 80px; }
-.nadi-table th:nth-child(11), .nadi-table td:nth-child(11) { width: 80px; }
-.nadi-table th:nth-child(12), .nadi-table td:nth-child(12) { width: 100px; }
-.nadi-table th:nth-child(13), .nadi-table td:nth-child(13) { width: 220px; }
-.nadi-table th:nth-child(14), .nadi-table td:nth-child(14) { width: 180px; }
+.nadi-table th:nth-child(10), .nadi-table td:nth-child(10){ width: 80px; }
+.nadi-table th:nth-child(11), .nadi-table td:nth-child(11){ width: 80px; }
+.nadi-table th:nth-child(12), .nadi-table td:nth-child(12){ width: 100px; }
+.nadi-table th:nth-child(13), .nadi-table td:nth-child(13){ width: 220px; }
+.nadi-table th:nth-child(14), .nadi-table td:nth-child(14){ width: 140px; } /* tindakan sedikit lebih padat */
 
 /* Tooltip ringkas */
 .nadi-table td:hover::after{
   content: attr(data-title);
-  position:absolute; left:0; top:100%; z-index:20; background:#333; color:#fff; padding:4px 8px; border-radius:4px; font-size:.8rem; white-space:normal; width:max-content; max-width:300px;
+  position:absolute; left:0; top:100%; z-index:20; background:#333; color:#fff; padding:4px 8px; border-radius:4px; font-size:.8rem;
+  white-space:normal; width:max-content; max-width:300px;
 }
 
-/* WA button */
-.nadi-wa { background-color:#25D366 !important; color:#fff !important; border-color:#25D366 !important; }
-.nadi-wa:hover { background-color:#128C7E !important; border-color:#128C7E !important; }
+/* Responsive */
+@media (max-width:992px){
+  .stat-card .number{font-size:1.3rem}
+}
 </style>
 </head>
 <body>
+
 <!-- Global Loader -->
 <div id="appLoader" aria-hidden="true">
   <div class="loader-card">
@@ -362,6 +378,7 @@ body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:#f5f7fa;
     <div class="d-flex justify-content-between align-items-center mb-2">
       <h2 class="h6 m-0"><i class="bi bi-clipboard2-pulse me-2"></i>Program PEKA B40 bersama NADI</h2>
       <div class="d-flex gap-2">
+        <!-- ikut 2.5.0: Tambah Baris di kiri, Export CSV di kanan -->
         <button id="btnAddNadiRow" class="btn btn-sm btn-primary" type="button"><i class="bi bi-plus-lg me-1"></i>Tambah Baris</button>
         <button id="btnNadiExportCsv" class="btn btn-sm btn-outline-success" type="button"><i class="bi bi-filetype-csv me-1"></i>Transfer kepada fail Excel (CSV)</button>
       </div>
@@ -388,11 +405,13 @@ body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:#f5f7fa;
             </tr>
           </thead>
           <tbody id="nadiTableBody">
-            <!-- 5 empty rows will be added by JavaScript -->
+            <!-- 5 baris kosong ditambah melalui JavaScript -->
           </tbody>
         </table>
       </div>
-      <div class="text-muted small mt-2">Nota: Baris "Layak" boleh terus <b>Daftar</b> (simpan ke sheet). Baris "Tidak Layak" <u>tidak</u> disimpan ke sheet tetapi <b>tetap dieksport CSV</b> bersama-sama.</div>
+      <div class="text-muted small mt-2">
+        Nota: Baris "Layak" boleh terus <b>Daftar</b> (simpan ke sheet). Baris "Tidak Layak" <u>tidak</u> disimpan ke sheet tetapi <b>tetap dieksport CSV</b> bersama-sama.
+      </div>
     </div></div>
   </section>
 
@@ -644,14 +663,14 @@ body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:#f5f7fa;
 <script>
 /* =======================
    KONFIG (EDIT INI SAHAJA)
-======================= */
+   ======================= */
 const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbx6TKE0vDDPO3-36cY7xjacAbGL0HIRKCrORNm-sED9y5NpIeIUk9gyrpiWy-S7vbc/exec';
 const GOOGLE_CLIENT_ID = '863564124015-838ksbuk27f0kkomm16hnc3bu608pbrr.apps.googleusercontent.com';
 const LOGO_URL = 'https://github.com/sihat9/mari-jalan-dengan-doktor/blob/main/img/logo-kss.png?raw=true';
 
 /* =======================
    AUTH (Google Identity)
-======================= */
+   ======================= */
 let ID_TOKEN = '';
 let STAFF_EMAIL = '';
 
@@ -707,7 +726,7 @@ async function handleCredentialResponse(resp){
 
 /* =======================
    LOADER (maks 2s)
-======================= */
+   ======================= */
 let loaderTimer=null;
 function showLoader(msg='Memproses…'){
   document.getElementById('loaderMsg').textContent = msg;
@@ -719,7 +738,7 @@ function hideLoader(){ document.getElementById('appLoader').style.display = 'non
 
 /* =======================
    NETWORK HELPERS
-======================= */
+   ======================= */
 async function getJSON(params={}, {silent=false, msg='Memuat data…'}={}){
   if (!ID_TOKEN) throw new Error('Belum login');
   const qs = new URLSearchParams({ ...params, id_token: ID_TOKEN }).toString();
@@ -752,7 +771,7 @@ async function postForm(params={}, {silent=false, msg='Menyimpan data…'}={}){
 
 /* =======================
    UTIL
-======================= */
+   ======================= */
 const normalizeMsisdnMY = (raw) => {
   if (!raw) return '';
   let s = String(raw).replace(/\D/g,'');
@@ -789,13 +808,13 @@ function toast(title, message, variant='primary'){
 
 /* =======================
    GLOBALS
-======================= */
+   ======================= */
 let stats3dChart, completed3dChart;
 let retcaModal, secondTcaModal, pdpaModal;
 
 /* =======================
    BOOTSTRAP APP
-======================= */
+   ======================= */
 function bootstrapApp(){
   const logoEl = document.getElementById('brandLogo');
   logoEl.src = LOGO_URL;
@@ -809,7 +828,7 @@ function bootstrapApp(){
   setupSearchBars();
   setupExports();
   setupExcel();
-  setupNADI();
+  setupNADI();        // <— Halaman NADI yang ditambah baik
   setupLogDrawer();
   setupFab();
 
@@ -821,7 +840,7 @@ function bootstrapApp(){
 
 /* =======================
    NAV & UI
-======================= */
+   ======================= */
 function setupNavigation(){
   document.querySelectorAll('.nav-link').forEach(a=>{
     a.addEventListener('click',(e)=>{
@@ -906,7 +925,7 @@ function setupExports(){
 
 /* =======================
    CHART HELPERS
-======================= */
+   ======================= */
 function buildBarChart(elId, dataArr, titleText){
   const el = document.getElementById(elId);
   if (!el || !window.Chart) return null;
@@ -930,7 +949,7 @@ function buildBarChart(elId, dataArr, titleText){
 
 /* =======================
    LOG CALLS DRAWER
-======================= */
+   ======================= */
 let logDrawerTimer=null, lastLogCount=0;
 function setupLogDrawer(){
   document.getElementById('logSearch').addEventListener('input', ()=> refreshLogs());
@@ -967,7 +986,7 @@ async function refreshLogs(opts={}){
 
 /* =======================
    EXCEL (Kelayakan)
-======================= */
+   ======================= */
 function setupExcel(){
   const input = document.getElementById('excelFile');
   const tbody = document.getElementById('kelayakanTable');
@@ -1065,8 +1084,8 @@ async function daftarFromExcel(rowId, encNama, encIC, msisdn){
 }
 
 /* =======================
-   NADI PAGE
-======================= */
+   NADI PAGE (2.5.0 layout)
+   ======================= */
 function setupNADI(){
   const container = document.getElementById('nadiTableBody');
   container.innerHTML = '';
@@ -1076,7 +1095,7 @@ function setupNADI(){
   document.getElementById('btnAddNadiRow').addEventListener('click', addNadiRow);
 }
 
-// auto-growing input
+// input auto-grow
 function createAutoGrowInput(placeholder = '', initialWidth = 100) {
   const wrapper = document.createElement('div');
   wrapper.className = 'input-grow-wrapper';
@@ -1214,9 +1233,10 @@ function addNadiRow(){
   const actionCell = document.createElement('td');
   actionCell.className = 'action-buttons';
   const daftarBtn = document.createElement('button'); daftarBtn.className='btn btn-sm btn-outline-primary nadi-daftar'; daftarBtn.disabled=true; daftarBtn.type='button'; daftarBtn.innerHTML='<i class="bi bi-save"></i> Daftar';
-  const waBtn = document.createElement('button'); waBtn.className='btn btn-sm btn-outline-success nadi-wa'; waBtn.type='button'; waBtn.innerHTML='<i class="bi bi-whatsapp"></i> WA';
   const buangBtn = document.createElement('button'); buangBtn.className='btn btn-sm btn-outline-danger nadi-buang'; buangBtn.type='button'; buangBtn.innerHTML='<i class="bi bi-trash"></i> Buang';
-  actionCell.appendChild(daftarBtn); actionCell.appendChild(waBtn); actionCell.appendChild(buangBtn); row.appendChild(actionCell);
+  actionCell.appendChild(daftarBtn);
+  actionCell.appendChild(buangBtn);
+  row.appendChild(actionCell);
 
   tbody.appendChild(row);
 
@@ -1244,7 +1264,7 @@ function addNadiRow(){
       takLayakInput.checked = false;
       tcaDate.disabled = false; tcaTime.disabled = false; staffInput.disabled = false; daftarBtn.disabled = false;
     } else {
-      tcaDate.disabled = true;  tcaTime.disabled = true;  staffInput.disabled = true;  daftarBtn.disabled = true;
+      tcaDate.disabled = true;  tcaTime.disabled = true; staffInput.disabled = true; daftarBtn.disabled = true;
     }
   });
   takLayakInput.addEventListener('change', () => {
@@ -1271,36 +1291,6 @@ function addNadiRow(){
         bmiInput.value=''; tcaDate.value=''; tcaTime.value=''; layakInput.checked=false; takLayakInput.checked=false;
       } else { throw new Error(res.message || 'Gagal mendaftar'); }
     } catch (e) { toast('Ralat', e.message, 'danger'); }
-  });
-
-  // WhatsApp (buka WhatsApp Web dengan mesej ringkas + saranan lampirkan imej)
-  waBtn.addEventListener('click', async () => {
-    try {
-      const data = {
-        nama: namaInput.value.trim(),
-        ic: icInput.value.trim(),
-        tel: telInput.value.trim(),
-        alamat: alamatInput.value.trim(),
-        bp: bpInput.value.trim(),
-        pr: prInput.value.trim(),
-        dxtType: dxtTypeHidden.value,
-        dxt: dxtInput.value.trim(),
-        tinggi: tinggiInput.value.trim(),
-        berat: beratInput.value.trim(),
-        bmi: bmiInput.value.trim(),
-        layak: layakInput.checked
-      };
-      if (!data.tel) return toast('Ralat','Sila isi nombor telefon terlebih dahulu','danger');
-      const file = await buildNadiReportImage(data); // disimpan untuk dilampirkan manual
-      const message = `Laporan Saringan NADI\nNama: ${data.nama}\nIC: ${data.ic}\nBP: ${data.bp}\nPR: ${data.pr}\nDXT (${data.dxtType}): ${data.dxt}\nTinggi: ${data.tinggi} cm\nBerat: ${data.berat} kg\nBMI: ${data.bmi}\nStatus: ${data.layak ? 'LAYAK Saringan PEKA B40' : 'TIDAK LAYAK Saringan PEKA B40'}`;
-      const phone = data.tel.startsWith('60') ? data.tel : (data.tel.startsWith('0') ? '60'+data.tel.slice(1) : '60'+data.tel);
-      const whatsappUrl = `https://web.whatsapp.com/send?phone=${phone}&text=${encodeURIComponent(message)}`;
-      // Simpan imej ke disk (download) agar boleh dilampirkan di WhatsApp Web
-      const dlUrl = URL.createObjectURL(file);
-      const a=document.createElement('a'); a.href=dlUrl; a.download='laporan_nadi.png'; document.body.appendChild(a); a.click(); a.remove(); setTimeout(()=>URL.revokeObjectURL(dlUrl), 2000);
-      window.open(whatsappUrl, '_blank');
-      toast('Makluman', 'Imej laporan dimuat turun. Buka WhatsApp Web & lampirkan imej tersebut.', 'info');
-    } catch (e) { toast('Ralat', 'Gagal jana laporan: ' + e.message, 'danger'); }
   });
 
   // Buang
@@ -1346,57 +1336,9 @@ async function exportNadiCSV() {
   toast('Export', 'Fail CSV telah dimuat turun', 'success');
 }
 
-/* Hasilkan imej laporan NADI (canvas → File PNG) */
-async function buildNadiReportImage(data){
-  const w=900, h=1100, pad=28, line=36;
-  const canvas = document.createElement('canvas'); canvas.width=w; canvas.height=h;
-  const ctx = canvas.getContext('2d');
-  ctx.fillStyle='#ffffff'; ctx.fillRect(0,0,w,h);
-  ctx.fillStyle='#2c3e50'; ctx.fillRect(0,0,w,118);
-  try{
-    const img = new Image(); img.crossOrigin='anonymous'; img.src=LOGO_URL;
-    await new Promise((res)=>{ img.onload=res; img.onerror=()=>res(); });
-    if (img.width) ctx.drawImage(img, pad, 18, 86, 86);
-  }catch(_){}
-  ctx.fillStyle='#ffffff'; ctx.font='700 28px Segoe UI, Arial'; ctx.fillText('Klinik SihatSokmo', 118, 54);
-  ctx.font='600 20px Segoe UI, Arial'; ctx.fillText('Laporan Saringan Program NADI', 118, 86);
-
-  const tarikh = new Date().toLocaleString('ms-MY', {year:'numeric',month:'long',day:'numeric', hour:'2-digit', minute:'2-digit'});
-  ctx.fillStyle='#333'; ctx.font='600 20px Segoe UI, Arial'; ctx.fillText('Butiran Pesakit', pad, 160);
-  ctx.font='400 18px Segoe UI, Arial';
-  let y=196;
-  const write = (label, val)=>{ ctx.fillStyle='#666'; ctx.fillText(label, pad, y); ctx.fillStyle='#111'; ctx.fillText(': '+(val||'-'), pad+180, y); y+=line; };
-  write('Nama', data.nama);
-  write('No. IC', data.ic);
-  write('Tarikh Cetakan', tarikh);
-  ctx.strokeStyle='#e5e7eb'; ctx.lineWidth=2; ctx.beginPath(); ctx.moveTo(pad, y+8); ctx.lineTo(w-pad, y+8); ctx.stroke(); y+=30;
-
-  ctx.fillStyle='#333'; ctx.font='600 20px Segoe UI, Arial'; ctx.fillText('Keputusan Saringan', pad, y); y+=line;
-  ctx.font='400 18px Segoe UI, Arial';
-  write('Tekanan Darah (BP)', data.bp);
-  write('Degupan Jantung (PR)', data.pr);
-  write(`Bacaan Gula (DXT - ${data.dxtType})`, data.dxt);
-  write('Tinggi', data.tinggi ? (data.tinggi+' cm') : '');
-  write('Berat', data.berat ? (data.berat+' kg') : '');
-  write('BMI', data.bmi);
-
-  y+=14;
-  const statusTxt = data.layak ? 'LAYAK Saringan PEKA B40' : 'TIDAK LAYAK Saringan PEKA B40';
-  ctx.fillStyle = data.layak ? '#16a085' : '#c0392b';
-  ctx.fillRect(pad, y, w-pad*2, 70);
-  ctx.fillStyle='#fff'; ctx.font='700 22px Segoe UI, Arial';
-  ctx.fillText(statusTxt, pad+16, y+44);
-
-  ctx.fillStyle='#94a3b8'; ctx.font='400 14px Segoe UI, Arial';
-  ctx.fillText('Untuk rujukan pesakit. Sila hubungi klinik jika ada pertanyaan.', pad, h-24);
-
-  const blob = await new Promise(res=> canvas.toBlob(res, 'image/png', 0.92));
-  return new File([blob], 'laporan_nadi.png', { type:'image/png' });
-}
-
 /* =======================
    DATA LOADERS
-======================= */
+   ======================= */
 async function loadDashboardData(){
   try{
     const data = await getJSON({ action:'getDashboardData' }, { msg:'Memuat Dashboard…' });
@@ -1573,7 +1515,6 @@ async function loadFirstVisitData(){
     }
   }catch(e){ /* senyap */ }
 }
-
 function isWithin24hOfDate(dateStr){
   const d = parseDDMMYYYY(dateStr);
   if (!d) return false;
@@ -1712,7 +1653,7 @@ async function loadArchivedData(){
 
 /* =======================
    ACTIONS
-======================= */
+   ======================= */
 async function markFirstVisit(noIC){
   try{
     const res = await postForm({ action:'updateStatus', op:'firstVisit', noIC, staff: STAFF_EMAIL }, { msg:'Merekod Hadir (First Visit)…' });
@@ -1860,7 +1801,7 @@ async function restorePatient(noIC){
 
 /* =======================
    PENDAFTARAN & EXPORT
-======================= */
+   ======================= */
 async function daftarPesakit(){
   const formData = {
     action:'daftarPesakit',
@@ -1906,7 +1847,7 @@ async function exportCompletedCSV(){
 
 /* =======================
    STARTUP
-======================= */
+   ======================= */
 document.addEventListener('DOMContentLoaded', ()=>{
   initGoogleSignIn();
   // tarikh header
